Solve background image is hidden on dark mode

--- a/public/scss/_global.scss
+++ b/public/scss/_global.scss
@@ -75,6 +75,9 @@ body {
       * {
         color: var(--textColorRgb);
       }
+      img {
+        background-color: var(--textColorRgb);
+      }
     }
   }
   &.warm {
